[gd_scene load_steps=7 format=3 uid="uid://qnht5hpx5rrf"]

[ext_resource type="FontFile" uid="uid://dlbghev4ongqy" path="res://assets/Fonts/LuckiestGuy-Regular.ttf" id="1_k7yps"]
[ext_resource type="Script" path="res://scripts/add_item.gd" id="1_ok36x"]
[ext_resource type="Texture2D" uid="uid://cbwmea3bae8t3" path="res://assets/ui/panel_beige.png" id="3_fkx4q"]

[sub_resource type="LabelSettings" id="LabelSettings_s325r"]
font = ExtResource("1_k7yps")
font_size = 72
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xsn67"]
font = ExtResource("1_k7yps")
font_size = 74
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k5xp6"]
font = ExtResource("1_k7yps")
font_size = 72
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[node name="AddItem" type="Node2D"]
script = ExtResource("1_ok36x")

[node name="Label2" type="Label" parent="."]
offset_left = 168.0
offset_top = 49.0
offset_right = 497.0
offset_bottom = 122.0
scale = Vector2(0.680788, 1.18638)
text = "Add item!"
label_settings = SubResource("LabelSettings_s325r")

[node name="nameLabel" type="Label" parent="."]
offset_left = 37.0
offset_top = 197.0
offset_right = 335.0
offset_bottom = 262.0
scale = Vector2(0.466021, 0.798913)
text = "Product:"
label_settings = SubResource("LabelSettings_xsn67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProductName" type="LineEdit" parent="nameLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.481
anchor_right = 1.481
anchor_bottom = 0.013
offset_left = -22.92
offset_top = -3.0
offset_right = 417.08
offset_bottom = 29.025
scale = Vector2(1.33326, 1.75163)
placeholder_text = "Name of product..."
alignment = 2

[node name="priceLabel" type="Label" parent="."]
offset_left = 39.0
offset_top = 290.0
offset_right = 249.0
offset_bottom = 365.0
scale = Vector2(0.466021, 0.798913)
text = "price:"
label_settings = SubResource("LabelSettings_xsn67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="priceBox" type="SpinBox" parent="priceLabel"]
layout_mode = 0
offset_left = 839.017
offset_top = -11.2653
offset_right = 922.08
offset_bottom = 19.7347
scale = Vector2(2.62718, 2.14921)
min_value = 0.01
max_value = 500.0
step = 0.01
value = 0.01
alignment = 1

[node name="weight" type="Label" parent="."]
offset_left = 40.0
offset_top = 375.0
offset_right = 321.0
offset_bottom = 450.0
scale = Vector2(0.466021, 0.798913)
text = "weight:"
label_settings = SubResource("LabelSettings_xsn67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="weight"]
layout_mode = 0
offset_left = 302.561
offset_top = -2.50341
offset_right = 371.561
offset_bottom = 28.4966
scale = Vector2(1.99254, 1.92467)
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "KG"
popup/item_0/id = 0
popup/item_1/text = "G"
popup/item_1/id = 1
popup/item_2/text = "ML"
popup/item_2/id = 2
popup/item_3/text = "L"
popup/item_3/id = 3

[node name="weightBox" type="SpinBox" parent="weight"]
layout_mode = 0
offset_left = 834.726
offset_top = -1.25171
offset_right = 917.788
offset_bottom = 29.7483
scale = Vector2(2.62718, 2.14921)
min_value = 0.01
max_value = 10000.0
step = 0.01
value = 0.01
alignment = 1
custom_arrow_step = 0.1

[node name="AddItemButton" type="TextureButton" parent="."]
offset_left = 309.0
offset_top = 878.0
offset_right = 409.0
offset_bottom = 978.0
scale = Vector2(1.48912, 0.660217)
texture_normal = ExtResource("3_fkx4q")

[node name="AddLabel" type="Label" parent="AddItemButton"]
layout_mode = 0
offset_left = 7.38689
offset_top = 25.7491
offset_right = 336.387
offset_bottom = 98.7491
scale = Vector2(0.261355, 0.795908)
text = "Add item"
label_settings = SubResource("LabelSettings_k5xp6")

[node name="BackToMainButton" type="TextureButton" parent="."]
offset_left = 97.0
offset_top = 876.0
offset_right = 197.0
offset_bottom = 976.0
scale = Vector2(1.48912, 0.660217)
texture_normal = ExtResource("3_fkx4q")

[node name="BackLabel" type="Label" parent="BackToMainButton"]
layout_mode = 0
offset_left = 7.38689
offset_top = 25.7491
offset_right = 336.387
offset_bottom = 98.7491
scale = Vector2(0.261355, 0.795908)
text = "Back"
label_settings = SubResource("LabelSettings_k5xp6")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="AddItemButton" to="." method="_on_add_item_button_pressed"]
[connection signal="pressed" from="BackToMainButton" to="." method="_on_back_to_main_button_pressed"]
